# imgur_openapi-rs

./: .openapi-generator-ignore  Cargo.toml  README.md
.github/workflows/: release.yml  test.yml
.openapi-generator/: FILES
src/apis/: account_api.rs  auth_api.rs  configuration.rs  image_api.rs  mod.rs
src/models/: access_token.rs  account.rs  account_images_response.rs  account_response.rs  account_user_follow.rs  basic_boolean_response.rs  basic_int32_response.rs  basic_string_response.rs  image.rs  image_response.rs  mod.rs
template/: Cargo.mustache
