[package]
name = "imgur_openapi"
version = "0.4.0"
edition = "2018"
description = "Imgur API client library for Rust."
license = "MIT"
homepage = "https://github.com/r7kamura/imgur_openapi-rs"
repository = "https://github.com/r7kamura/imgur_openapi-rs"
include = ["src/**/*", "LICENSE.txt", "README.md"]

[dependencies]
serde = "^1.0"
serde_derive = "^1.0"
serde_json = "^1.0"
url = "^2.2"
[dependencies.reqwest]
version = "^0.11"
features = ["json", "multipart"]

[dev-dependencies]
